--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ main{
     padding: 10px;
     margin: auto;
     border-radius: 90px;
+    box-shadow: 30px,30px,30px,black;
 }
 
 ol{
@@ -33,6 +34,6 @@ color: #0e0d0e;
 
 img{
     text-align: center;
-    height: 100px;
-    width: 100px;
+    height: 200px;
+    width: 200px;
 }
